# LabsOAuP

LR1/Task_1/: CMakeLists.txt  ellipse.cpp  ellipse.h  eyes.cpp  eyes.h  face.h  lips.cpp  lips.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
LR1/Task_2/: CMakeLists.txt  circle.cpp  circle.h  eightstar.cpp  eightstar.h  ellipse.cpp  ellipse.h  figure.cpp  figure.h  fivestar.cpp  fivestar.h  hexagon.cpp  hexagon.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphicsview.cpp  mygraphicsview.h  polygonfigure.cpp  polygonfigure.h  rectangle.cpp  rectangle.h  resource.qrc  rhombus.cpp  rhombus.h  sixstar.cpp  sixstar.h  square.cpp  square.h  triangle.cpp  triangle.h
LR2/: для1таски.txt  для2таски.txt
LR2/Task_1/: CMakeLists.txt  date.cpp  date.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
LR2/Task_2/: CMakeLists.txt  candidate.cpp  candidate.h  candidatedialog.cpp  candidatedialog.h  candidatedialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
LR2/Task_3/: CMakeLists.txt  binaryoperation.cpp  binaryoperation.h  expression.h  main.cpp  number.cpp  number.h
LR3/: CMakeLists.txt
LR3/Task_1/: Task_1.cpp
LR3/Task_2/: Task_2.cpp
LR3/Task_3/: Task_3.cpp
LR3/Task_4/: Task_4.cpp
LR3/Task_5/: CMakeLists.txt  folderfilescount.cpp  folderfilescount.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
LR4/: CMakeLists.txt
LR4/Task_1_2/: binSearch.cpp  binpow.cpp  heapSort.cpp  interpolationSort.cpp  main.cpp  mergeSort.cpp  quickSort.cpp  sorts.h  speed.cpp
LR4/Task_3/: main.cpp  sort.cpp  sort.h
LR4/Task_4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  vector.cpp  vector.h
LR5/: Наступила весна Светит.txt
LR5/Task_1/: CMakeLists.txt  languagehandler.cpp  languagehandler.h  mainwindow.cpp  mainwindow.h
LR5/Task_2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
LR5/Task_2/MyStringLib/: CMakeLists.txt  MyStringLib_global.h  mystringlib.cpp  mystringlib.h
LR5/Task_3/: bitset.cpp  bitset.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
LR6/Task_1/: CMakeLists.txt  Toy.h  inputdialog.cpp  inputdialog.h  inputdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  toy.cpp  toy.h
LR6/Task_2/: CMakeLists.txt  Toy.h  inputdialog.cpp  inputdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
LR7/Task_1/: CMakeLists.txt  bubblequeuesorter.cpp  bubblequeuesorter.h  iqueue.h  mainwindow.cpp  mainwindow.h  queue.cpp  queue.h
LR7/Task_2/: CMakeLists.txt  avl.cpp  avl.h  mainwindow.cpp  mainwindow.h
LR7/Task_3/: hashtable.cpp  hashtable.h  mainwindow.cpp  mainwindow.h
LR7/Task_4/: CMakeLists.txt  hashtable.cpp  hashtable.h  mainwindow.cpp  mainwindow.h
LR7/Task_5/: CMakeLists.txt  deque.h  mainwindow.cpp  mainwindow.h
LR8/Task_1/: CMakeLists.txt  binarytreesearch.cpp  binarytreesearch.h  mainwindow.cpp  mainwindow.h
LR8/Task_2/: CMakeLists.txt  arrayheap.cpp  arrayheap.h  listheap.h  mainwindow.cpp  mainwindow.h
LR8/Task_3/: CMakeLists.txt  bstree.h  hashtable.h  mainwindow.cpp  mainwindow.h
